--- a/Proyecto7/Calculadora.html
+++ b/Proyecto7/Calculadora.html
@@ -3,102 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora Simple</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background: rgb(0, 0, 0);
-    }
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 
-    table {
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-
-    input {
-      width: 50px;
-      height: 50px;
-      font-size: 18px;
-    }
-
-    input[type="button"]{
-        padding: 5px;
-        border-radius: 20px;
-        color: rgb(255, 255, 255);
-        background: rgb(29, 29, 29);
-        font-size: 20px;
-        border: 1px solid transparent;
-    }
-    input[type="button"][value="="] {
-        color: rgb(0, 0, 0);
-        background: rgb(69, 14, 114);
-    }
-
-    #display{
-        border-radius: 20px;
-        width: 200px;
-        background-color: rgb(0, 0, 0);
-        padding: 10px;
-        margin-bottom: 10px;
-        color: rgb(69, 14, 114);
-        text-align: right;
-        font-size: 30px;
-    }
-  </style>
+  <title>Calculadora Simple</title> 
 </head>
+
 <body>
-  <td><input type="text" id="display" disabled placeholder="Calculadora" style="font-size: 1.8em;"></td>
-  <table>
-    <tr>
-    </tr>
-    <tr>
-      <td><input type="button" value="1" onclick="appendToDisplay('1')"></td>
-      <td><input type="button" value="2" onclick="appendToDisplay('2')" ></td>
-      <td><input type="button" value="3" onclick="appendToDisplay('3')"></td>
-      <td><input type="button" value="/" onclick="appendToDisplay('/')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="4" onclick="appendToDisplay('4')"></td>
-      <td><input type="button" value="5" onclick="appendToDisplay('5')"></td>
-      <td><input type="button" value="6" onclick="appendToDisplay('6')"></td>
-      <td><input type="button" value="-" onclick="appendToDisplay('-')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="7" onclick="appendToDisplay('7')"></td>
-      <td><input type="button" value="8" onclick="appendToDisplay('8')"></td>
-      <td><input type="button" value="9" onclick="appendToDisplay('9')"></td>
-      <td><input type="button" value="+" onclick="appendToDisplay('+')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="0" onclick="appendToDisplay('0')"></td>
-      <td><input type="button" value="." onclick="appendToDisplay('.')"></td>
-      <td><input type="button" value="C" onclick="clearDisplay()"></td>
-      <td><input type="button" value="=" onclick="calculate()"></td>
-    </tr>
-  </table>
+  <div class="calculadora text-center">
+    <td><input type="text" id="display" disabled placeholder="0" style="font-size: 1.8em;" class="resultados"></td>
+    <table>
+      <tr>
+      </tr>
+      <tr>
+        <td><input type="button" value="1" onclick="appendToDisplay('1')"></td>
+        <td><input type="button" value="2" onclick="appendToDisplay('2')" ></td>
+        <td><input type="button" value="3" onclick="appendToDisplay('3')"></td>
+        <td><input type="button" value="/" onclick="appendToDisplay('/')"></td>
+      </tr>
+      <tr>
+        <td><input type="button" value="4" onclick="appendToDisplay('4')"></td>
+        <td><input type="button" value="5" onclick="appendToDisplay('5')"></td>
+        <td><input type="button" value="6" onclick="appendToDisplay('6')"></td>
+        <td><input type="button" value="-" onclick="appendToDisplay('-')"></td>
+      </tr>
+      <tr>
+        <td><input type="button" value="7" onclick="appendToDisplay('7')"></td>
+        <td><input type="button" value="8" onclick="appendToDisplay('8')"></td>
+        <td><input type="button" value="9" onclick="appendToDisplay('9')"></td>
+        <td><input type="button" value="+" onclick="appendToDisplay('+')"></td>
+      </tr>
+      <tr>
+        <td><input type="button" value="0" onclick="appendToDisplay('0')"></td>
+        <td><input type="button" value="." onclick="appendToDisplay('.')"></td>
+        <td><input type="button" value="x" onclick="appendToDisplay('*')"></td>
+        <td><input type="button" value="C" onclick="clearDisplay()"></td>
+      </tr>
+      <tr>
+        <td><input type="button" value="√" onclick="calculateSquareRoot()"></td>
+        <td><input type="button" value="x²" onclick="calculateSquare()"></td>
+        <td><input type="button" value="π" onclick="appendToDisplay(Math.PI)"></td>
+        <td><input type="button" value="=" onclick="calculate()"></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
 
-  <script>
-    function appendToDisplay(value) {
-      document.getElementById('display').value += value;
-    }
-
-    function clearDisplay() {
-      document.getElementById('display').value = '';
-    }
-
-    function calculate() {
-      try {
-        document.getElementById('display').value = eval(document.getElementById('display').value);
-      } catch (error) {
-        document.getElementById('display').value = 'Error';
-      }
-    }
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 
 </body>
 </html>
