--- a/Proyecto7/Calculadora.html
+++ b/Proyecto7/Calculadora.html
@@ -49,6 +49,11 @@
     </table>
   </div>
 
+  <details style="color: rgb(59, 59, 59); margin-top: 1em;">
+    <summary>Historial de Operaciones</summary>
+    <ul id="history" style="font-size: 1.2em; margin-top: 10px;"></ul>
+  </details>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
 
